<resources>
    <string name="app_name">StoryApp</string>
    <string name="error_email">Format Email Tidak Sesuai</string>
    <string name="error_password">Password minimal 6 karakter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="blob">blob</string>
    <string name="login">Login</string>
    <string name="login_msg">Silakan login untuk lanjut</string>
    <string name="login_msg_2">Sudah Punya Akun?</string>
    <string name="daftar_msg">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_msg_2">Daftar untuk membuat akun</string>
    <string name="nama">Nama</string>
    <string name="story">story</string>
    <string name="username">username</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis viverra nibh cras pulvinar mattis nunc sed blandit. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus.</string>
    <string name="date">2022–01–08T06:34:18.598Z</string>
    <string name="add_img">tambah gambar</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="fab">fab upload</string>
    <string name="desc_hint">Masukkan Desripsi Story …</string>
    <string name="unggah">Unggah</string>
    <string name="logo">logo</string>
    <string name="time_splash">3000</string>
    <string name="no_story_msg">Tidak Ada Stories Ditemukan</string>
    <string name="setting">Setting</string>
    <string name="lang_setting">Pengaturan Bahasa</string>
    <string name="logout">Logout</string>
    <string name="logout_status">Logout Sukses</string>
    <string name="reject">Tidak mendapatkan permission.</string>
    <string name="no_image">Tambah Gambar Dahulu !!</string>
    <string name="choose">Pilih Gambar</string>
    <string name="detail">Detail Story</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="maps">Peta Lokasi Cerita</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="my_location">Dapatkan Lokasi</string>
</resources>