<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.setting.SettingActivity">

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:text="@string/lang_setting"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:text="@string/logout"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/splash"
        android:contentDescription="@string/logo" />
</LinearLayout>